# CryptoSocket

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  SOURCES.txt  appveyor.yml  build.sh  requirements.txt  setup.py
CryptoSocket/: __init__.py  __version__.py  build.py
CryptoSocket/Crypto/: CMakeLists.txt  Decrypt.py  Decrypter.cpp  Decrypter.py  Decrypter.pyx  Encrypt.py  Encrypter.cpp  Encrypter.py  Encrypter.pyx  RSA.cpp  RSA.py  RSA.pyx  __init__.py
CryptoSocket/Crypto/include/: decrypter.pxd  encrypter.pxd  rsa.pxd
CryptoSocket/Crypto/source/: CMakeLists.txt  decrypter.cpp  decrypter.pyx  encrypter.cpp  encrypter.pyx  rsa.cpp  rsa.pyx
CryptoSocket/Socket/: Socket.py  __init__.py
CryptoSocket/examples/: ObjectToTransfer.py  client.py  decrypt.py  encrypt.py  generate_key.py  server.py
cpp/example/: decrypt.cpp  encrypt.cpp  generate_key.cpp
cpp/include/: Decrypter.h  Encrypter.h  RSA.h
cpp/src/: Decrypter.cpp  Encrypter.cpp  RSA.cpp
